# allsports-mongo-to-postgres

./: Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py
src/utils/: destination.py  etl.py  source.py
tests/: test_destination.py  test_etl.py  test_source.py
